<resources>
    <string name="app_name">CprE_388_Project</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_scanner">ScannerActivity</string>
    <string name="title_activity_qrgen">QRgenActivity</string>
    <string name="emptyPhone">(Share phone number)</string>
    <string name="emptyEmail">(Share email address)</string>
    <string name="emptyWebsite">(Share website)</string>
    <string name="emptyNickname">(Share nickname)</string>
    <string name="todo">TODO</string>
    <string name="qrMessage">Message</string>
    <string name="scanTitle">Scan</string>
    <string name="usernameDefault">Username</string>
    <string name="editProfileText">Update Profile</string>
    <string name="nicknameText">Nickname</string>
    <string name="websiteText">Website</string>
    <string name="emailText">Email</string>
    <string name="phoneText">Phone</string>
</resources>
